# mosia

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  coordination_matrix.md  dependency_analysis.md  docker-compose.dev.yml  docker-compose.infrastructure.yml  docker-compose.yml  package.json
.claude/: settings.local.json
.serena/: project.yml
backend/micro/agents/: .env.sample  README.md  pyproject.toml  sitecustomize.py
backend/micro/agents/proto/: agents_service.proto  fetcher_service.proto  financial_agents.proto
backend/micro/agents/scripts/: compile_protos.sh  health_check.sh
backend/micro/agents/src/agents/: __init__.py  main.py
backend/micro/agents/src/agents/config/: logging.py  settings.py
backend/micro/agents/src/agents/core/agents/: content_analyzer.py  content_generator.py  conversation_ai.py  recommendation_engine.py
backend/micro/agents/src/agents/core/financial_agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
backend/micro/agents/src/agents/core/financial_agents/managers/: research_manager.py  risk_manager.py
backend/micro/agents/src/agents/core/financial_agents/researchers/: bear_researcher.py  bull_researcher.py
backend/micro/agents/src/agents/core/financial_agents/risk_mgmt/: aggresive_debator.py  conservative_debator.py  neutral_debator.py
backend/micro/agents/src/agents/core/financial_agents/trader/: trader.py
backend/micro/agents/src/agents/core/financial_agents/utils/: agent_states.py  agent_utils.py  memory.py
backend/micro/agents/src/agents/core/graph/: README.md
backend/micro/agents/src/agents/core/models/: analysis.py  generation.py  recommendation.py
backend/micro/agents/src/agents/grpc/: server.py
backend/micro/agents/src/agents/grpc/clients/: __init__.py  fetcher_client.py
backend/micro/agents/src/agents/grpc/handlers/: agents_handler.py  financial_handler.py
backend/micro/fetcher/: README.md  pyproject.toml
backend/micro/fetcher/docs/: optimization_implementation_summary.md
backend/micro/fetcher/scripts/: compile_protos.sh  deploy.sh  health_check.sh  init-db.sql  setup.py
backend/micro/fetcher/src/fetcher/: __init__.py  main.py
backend/micro/fetcher/src/fetcher/ai/: analyzer.py
backend/micro/fetcher/src/fetcher/config/: logging.py  settings.py
backend/micro/fetcher/src/fetcher/core/fetchers/: api_client.py  web_scraper.py
backend/micro/fetcher/src/fetcher/core/models/: base.py
backend/micro/fetcher/src/fetcher/core/processors/: data_processor.py
backend/micro/fetcher/src/fetcher/core/providers/: base.py  provider_manager.py
backend/micro/fetcher/src/fetcher/core/providers/akshare/: provider.py
backend/micro/fetcher/src/fetcher/core/providers/alpha_vantage/: __init__.py  provider.py
backend/micro/fetcher/src/fetcher/core/providers/finnhub/: __init__.py  provider.py
backend/micro/fetcher/src/fetcher/core/providers/polygon/: __init__.py  provider.py
backend/micro/fetcher/src/fetcher/core/providers/tushare/: __init__.py  provider.py
backend/micro/fetcher/src/fetcher/grpc/: middleware.py  response_builder.py  server.py
backend/micro/fetcher/src/fetcher/grpc/services/: equity_service.py  fetch_service.py  news_service.py
backend/micro/fetcher/tests/: simple_test.py  simple_validation.py  test_optimizations.py  test_service.py
backend/micro_service/agents/: pyproject.toml
backend/micro_service/fetcher/: pyproject.toml
(+347 files in other folders)
