[project]
name = "fetcher"
version = "0.1.0"
description = "Data Fetcher microservice for Mosia - external data integration and processing"
requires-python = ">=3.11"
dependencies = [
    "aiodns>=3.5.0",
    "aiohttp>=3.12.15",
    "akshare>=1.17.44",
    "beautifulsoup4>=4.13.5",
    "grpcio>=1.74.0",
    "grpcio-health-checking>=1.74.0",
    "grpcio-reflection>=1.74.0",
    "grpcio-tools>=1.74.0",
    "hatchling>=1.27.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "selenium>=4.35.0",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "tushare>=1.4.24",
    "xmltodict>=0.15.0",
    "yfinance>=0.2.65",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
]
