[project]
name = "agents"
version = "0.1.0"
description = "this is a agents mirco service for mosia just use for backend"
authors = [
    {name = "mofan",email = "mofan@mosia.app"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
