[project]
name = "fetcher"
version = "0.1.0"
description = "this is a micro service for finance data fetch just use for mosia"
authors = [
    {name = "mofan",email = "mofan@mosia.app"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
